--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,12 @@
 name = "park-importer"
 version = "0.1.0"
 authors = ["Marco Napetti <marco.napetti@gmail.com>"]
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[profile.release]
+strip = true
 
 [dependencies]
 tokio = { version = "0.2", features = ["full"] }
